Added toggle component, fixed small issues in input components

--- a/sb/stories/stories.styles.css
+++ b/sb/stories/stories.styles.css
@@ -1,7 +1,9 @@
 .flex {
     display: flex;
+    width: 100%;
 }
 
-.margin-r-24 *:not(last-child) {
+.margin-r-24 div:not(last-child) {
     margin-right: 24px;
+    width: 100%;
 }
