--- a/sb/stories/stories.styles.css
+++ b/sb/stories/stories.styles.css
@@ -1,7 +1,7 @@
-body {
-    margin: 0 !important;
-    padding: 0 !important;
-}
+/*body {*/
+/*    margin: 0 !important;*/
+/*    padding: 0 !important;*/
+/*}*/
 
 .flex {
     display: flex;
