--- a/sb/stories/stories.styles.css
+++ b/sb/stories/stories.styles.css
@@ -1,7 +1,7 @@
-/*body {*/
-/*    margin: 0 !important;*/
-/*    padding: 0 !important;*/
-/*}*/
+body.sb-show-main {
+    margin: 0 !important;
+    padding: 0 !important;
+}
 
 .flex {
     display: flex;
@@ -11,4 +11,11 @@
 .margin-r-24 div:not(last-child) {
     margin-right: 24px;
     width: 100%;
+}
+
+.atlantum-div {
+    height: 200px;
+    color: white;
+    background-color: blue;
+    text-align: center;
 }
