fixed main-header component, added ds logo in storybook

--- a/stories/stories.styles.css
+++ b/stories/stories.styles.css
@@ -17,6 +17,9 @@ body.sb-show-main {
     width: 80%;
     padding: 48px;
 }
+.atlantum-full-view {
+    padding: 48px;
+}
 
 .atlantum-compact {
     width: 25%;
